# ndcombine

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  benchmark.py  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: python-tests.yml
benchmarks/: Compare-combine.ipynb  Compare-median.ipynb  combine.py  median.py
docs/: Usage.ipynb  conf.py  index.rst
ndcombine/: __init__.py  ndcombine.pyx  sigma_clip.pxd  sigma_clip.pyx  utils.pxd  utils.pyx
ndcombine/tests/: helpers.py  test_ndcombine.py
src/ndcombine/: __init__.py  helpers.py  utils.pxd
