[build-system]
requires = ["setuptools>=61.2",
            "setuptools_scm[toml]>=6.2",
            "cython>=3.0.0",
            "numpy>=2.0.0",
            "extension-helpers==1.*"]
build-backend = 'setuptools.build_meta'

[project]
name = "ndcombine"
description = "Fast ND arrays combination"
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
    {name = "Simon Conseil", email = "contact@saimon.org"},
]
dependencies = ["astropy", "numpy"]
dynamic = ["version"]

[project.optional-dependencies]
docs = ["ipython", "nbsphinx", "sphinx-astropy"]
test = ["Cython", "coverage[toml]", "pytest-astropy"]

[project.urls]
repository = "https://github.com/saimn/ndcombine"

[tool.setuptools]
license-files = ["LICENSE.rst"]
include-package-data = true

[tool.setuptools.package-data]
"*" = [ "data/*" ]

[tool.setuptools_scm]
write_to = "src/ndcombine/_version.py"

[tool.coverage]
[tool.coverage.run]
plugins = ["Cython.Coverage"]
source = ["ndcombine"]
parallel = true
omit = [
  "*/ndcombine/_version*",
]
[tool.coverage.paths]
source = ["src", "*/site-packages"]
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover", # Have to re-enable the standard pragma
  "except ImportError", # Don't complain about packages we have installed
  "raise AssertionError", # Don't complain if tests don't hit assertion code
  "raise NotImplementedError",
  "'def main(.*):'", # Don't complain about script hooks
  "if __name__ == .__main__.:",
  "def _ipython_key_completions_", # Don't complain about IPython completion
]

[tool.pytest.ini_options]
filterwarnings = [
    # action:message:category:module:lineno
    # "ignore:.*Call to deprecated Parameter testval.*:DeprecationWarning:pymc3",
]
# doctest_plus = enabled
# text_file_format = rst
# addopts = --doctest-rst

[tool.ruff.lint]
select = [
  "E", "F", "W", # flake8
  "I",           # isort
  "UP",          # pyupgrade
  "NPY",         # numpy
]
unfixable = [
  "F841", # Removes unused variables
]
