[metadata]
name = ndcombine
author = Simon Conseil
author_email = contact@saimon.org
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/saimn/ndcombine
description = Fast ND arrays combination
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = saimn/ndcombine

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    astropy
    numpy

[options.extras_require]
tests =
    Cython
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
ndcombine = data/*

[tool:pytest]
testpaths = "ndcombine"
# astropy_header = true
# doctest_plus = enabled
# text_file_format = rst
# addopts = --doctest-rst

[coverage:run]
plugins = Cython.Coverage
omit =
    ndcombine/_astropy_init*
    ndcombine/conftest.py
    ndcombine/*setup_package*
    ndcombine/tests/*
    ndcombine/*/tests/*
    ndcombine/extern/*
    ndcombine/version*
    */ndcombine/_astropy_init*
    */ndcombine/conftest.py
    */ndcombine/*setup_package*
    */ndcombine/tests/*
    */ndcombine/*/tests/*
    */ndcombine/extern/*
    */ndcombine/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
